# qtimageviewer

./: .gitignore  CMakeLists.txt  imagelistview.cpp  mainwindow.ui
